<?xml version="1.0" encoding="utf-8"?>
<!-- Aquí se han añadido transiciones para la navegación entre fragmentos -->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/navigation_characters">

    <fragment
        android:id="@+id/navigation_worlds"
        android:name="dam.pmdm.spyrothedragon.ui.WorldsFragment"
        android:label="@string/worlds"
        tools:layout="@layout/fragment_worlds">

        <action
            android:id="@+id/action_navigation_worlds_to_navigation_collectibles"
            app:destination="@id/navigation_collectibles" />
        <action
            android:id="@+id/action_navigation_worlds_to_navigation_collectibles2"
            app:destination="@id/navigation_collectibles"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/navigation_characters"
        android:name="dam.pmdm.spyrothedragon.ui.CharactersFragment"
        android:label="@string/characters"
        tools:layout="@layout/fragment_characters">

        <action
            android:id="@+id/action_navigation_characters_to_navigation_worlds"
            app:destination="@id/navigation_worlds" />
        <action
            android:id="@+id/action_navigation_characters_to_navigation_worlds2"
            app:destination="@id/navigation_worlds"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/navigation_collectibles"
        android:name="dam.pmdm.spyrothedragon.ui.CollectiblesFragment"
        android:label="@string/collectibles"
        tools:layout="@layout/fragment_collectibles" >

    </fragment>
</navigation>