<?xml version="1.0" encoding="utf-8"?>
<!-- Diseño del layout para la primera pantalla de la guía -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/guideTabLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_transparent"
    android:clickable="true"
    android:focusable="true"
    android:visibility="gone">

    <TextView
        android:id="@+id/dialog1"
        style="@style/buttonDialog"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginBottom="150dp"
        android:gravity="center"
        android:text="@string/dialog1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSkipGuide"
        style="@style/buttonSkipGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:text="@string/saltar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/continueButton"
        style="@style/buttonContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:text="@string/continuar"
        app:backgroundTint="@null"
        app:icon="@android:drawable/ic_media_ff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/flecha"
        android:layout_width="94dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="200dp"
        android:rotation="-50"
        android:rotationX="0"
        android:rotationY="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog1"
        app:srcCompat="?attr/actionModeCloseDrawable" />


</androidx.constraintlayout.widget.ConstraintLayout>